--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 * {
   font-family: 'Roboto', Arial, sans-serif;
-  color: #616161;
+  color: #8C730C;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -24,7 +24,7 @@ router-outlet + *  {
 /* Text */
 
 h1 {
-  font-size: 32px;
+  font-size: 42px;
 }
 
 h2 {
@@ -43,12 +43,12 @@ p {
 
 a {
   cursor: pointer;
-  color: #1976d2;
+  color: #8C730C;
   text-decoration: none;
+  padding: 80px;
 }
 
 a:hover {
-  opacity: 0.8;
 }
 
 /* Input */
@@ -83,7 +83,6 @@ label {
 }
 
 .button:hover, button:hover {
-  opacity: 0.8;
   font-weight: normal;
 }
 
@@ -95,21 +94,21 @@ label {
 /* Fancy Button */
 
 .fancy-button {
-  background-color: white;
-  color: #1976d2;
+  background-color: rosybrown;
+  color: #8C730C;
 }
 
-.fancy-button i.material-icons {
+.fancy-button img.material-icons {
   color: #1976d2;
-  padding-right: 4px;
+  padding-right: 10px;
 }
 
 /* Top Bar */
 
-app-top-bar {
+app-header {
   width: 100%;
-  height: 68px;
-  background-color: #1976d2;
+  height: 100px;
+  background-color: rosybrown;
   padding: 16px;
   display: flex;
   flex-direction: row;
