--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 * {
   font-family: 'Roboto', Arial, sans-serif;
+  font-size: 25px;
   color: #8C730C;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -24,7 +25,18 @@ router-outlet + *  {
 /* Text */
 
 h1 {
-  font-size: 42px;
+  font-size: 45px;
+}
+
+.title {
+  position: relative;
+  padding-top: 15px;
+  padding-bottom: 13px;
+}
+
+.title:hover {
+  color: rosybrown;
+  background-color: #8C730C;
 }
 
 h2 {
@@ -45,10 +57,31 @@ a {
   cursor: pointer;
   color: #8C730C;
   text-decoration: none;
-  padding: 80px;
+  padding: 40px;
 }
 
-a:hover {
+a.nav-button {
+  position: relative;
+  top: 0;
+  transition: top ease 0.5s;
+}
+
+a:hover.nav-button {
+  top: -10px;
+}
+
+a.checkout {
+  font-style: italic;
+}
+
+.searchbar {
+  width: 400px;
+  height: 46px;
+  font-style: italic;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 25px;
+  margin-top: 10px;
+  margin-right: 20px;
 }
 
 /* Input */
@@ -71,14 +104,14 @@ label {
 
 /* Button */
 .button, button {
-  display: inline-flex;
+  display:inline-flex;
   align-items: center;
   padding: 8px 16px;
   border-radius: 2px;
   font-size: 14px;
   cursor: pointer;
-  background-color: #1976d2;
-  color: white;
+  background-color: #8C730C;
+  color: rosybrown;
   border: none;
 }
 
@@ -93,21 +126,26 @@ label {
 
 /* Fancy Button */
 
-.fancy-button {
-  background-color: rosybrown;
-  color: #8C730C;
+.cart-button, .search-button {
+  background-color: #8C730C;
+  color: rosybrown;
+  padding-right: 40px;
+  font-size: 25px;
 }
 
-.fancy-button img.material-icons {
-  color: #1976d2;
-  padding-right: 10px;
+.cart-button:hover, .search-button:hover {
+  font-style: italic;
+}
+
+img.material-icons {
+  padding-right: 15px;
 }
 
 /* Top Bar */
 
 app-header {
   width: 100%;
-  height: 100px;
+  height: 80px;
   background-color: rosybrown;
   padding: 16px;
   display: flex;
