--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,18 +2,9 @@
   <h1 class="title">NIDS</h1>
 </a>
 
-<div class="search-container">
-  <form action="/search">
-    <input class="searchbar" type="text" placeholder="Search for a product...">
-    <button class="search-button" type="submit">Search</button>
-  </form>
-</div>
+<app-search-bar></app-search-bar>
 
-<nav>
-  <a class="nav-button" [routerLink]="['/products']">Browse Products</a>
-  <a class="nav-button" [routerLink]="['/login/register']">Login/Register</a>
-  <a class="nav-button" [routerLink]="['/basket']">My Basket</a>
-</nav>
+<app-navigation-bar></app-navigation-bar>
 
 <a routerLink="/basket" class="button cart-button">
   <img class="material-icons" src="/assets/cart.jpg" alt="cart">Checkout
