--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<a href="#"><img src="#"></a>
+<a href="#"><img src="#"></a>
+<a href="#"><img src="#"></a>
+<a href="#"><img src="#"></a>
+<a href="#">Info</a>
+<a href="#">Language</a>
+<div>{{data}}</div>
