--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<h2>Nids: a place for all your needs</h2>
+<app-home></app-home>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 
