--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,5 +1,6 @@
 <nav>
+  <a class="nav-button" [routerLink]="['/memory']">Memory Usage</a>
   <a class="nav-button" [routerLink]="['/products']">Browse Products</a>
-  <a class="nav-button" [routerLink]="['/login/register']">Login/Register</a>
+  <a class="nav-button" [routerLink]="['/login']">Login/Register</a>
   <a class="nav-button" [routerLink]="['/basket']">My Basket</a>
 </nav>
