--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 * {
   font-family: 'Roboto', Arial, sans-serif;
   font-size: 25px;
-  color: #8C730C;
+  color: rgba(255, 255, 255, 0.8);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,6 +11,7 @@
 
 body {
   margin: 0;
+  background-color: #bc9f61;
 }
 
 .container {
@@ -35,8 +36,8 @@ h1 {
 }
 
 .title:hover {
-  color: rosybrown;
-  background-color: #8C730C;
+  color: #008000;
+  background-color: #C4AE7E;
 }
 
 h2 {
@@ -55,7 +56,6 @@ p {
 
 a {
   cursor: pointer;
-  color: #8C730C;
   text-decoration: none;
   padding: 40px;
 }
@@ -87,7 +87,7 @@ a.checkout {
 /* Input */
 
 input {
-  font-size: 14px;
+  font-size: 25px;
   border-radius: 2px;
   padding: 8px;
   margin-bottom: 16px;
@@ -110,9 +110,8 @@ label {
   border-radius: 2px;
   font-size: 14px;
   cursor: pointer;
-  background-color: #8C730C;
-  color: rosybrown;
   border: none;
+  background-color: #008000;
 }
 
 .button:hover, button:hover {
@@ -127,10 +126,8 @@ label {
 /* Fancy Button */
 
 .cart-button, .search-button {
-  background-color: #8C730C;
-  color: rosybrown;
   padding-right: 40px;
-  font-size: 25px;
+  font-size: 25 px;
 }
 
 .cart-button:hover, .search-button:hover {
@@ -141,12 +138,11 @@ img.material-icons {
   padding-right: 15px;
 }
 
-/* Top Bar */
-
-app-header {
+app-header, app-footer {
   width: 100%;
   height: 80px;
-  background-color: rosybrown;
+  background-color: #008000;
+  opacity: 0.75;
   padding: 16px;
   display: flex;
   flex-direction: row;
@@ -154,10 +150,6 @@ app-header {
   align-items: center;
 }
 
-app-top-bar h1 {
-  color: white;
-  margin: 0;
-}
 
 /* Checkout Cart, Shipping Prices */
 
